[gd_scene load_steps=71 format=3 uid="uid://d30rcarhtvs3l"]

[ext_resource type="Texture2D" uid="uid://djpc5i6j0nr6f" path="res://eso0932a.jpg" id="1"]
[ext_resource type="Texture2D" uid="uid://bo7ggjles43lt" path="res://Earth.jpg" id="2"]
[ext_resource type="Script" path="res://MeshInstance.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://dhn0k4rqi6bpa" path="res://Sun.jpg" id="4"]
[ext_resource type="Script" path="res://CSGSphere.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://cnunvw0vhhvfb" path="res://Jupiter.jpg" id="6"]
[ext_resource type="Script" path="res://CSGSphere3.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://m5sa5lvry4qi" path="res://lroc_color_poles_1k.jpg" id="8"]
[ext_resource type="Script" path="res://MeshInstance3.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://b8eusbty2o0pn" path="res://PIA17386.jpg" id="10"]
[ext_resource type="PackedScene" path="res://ISS_stationary.tscn" id="11"]
[ext_resource type="Texture2D" uid="uid://dsavpcljw2rix" path="res://mars_1k_color.jpg" id="12"]
[ext_resource type="Texture2D" uid="uid://0lwo0p2dvv3j" path="res://ven0aaa2-copy-428-321.jpg" id="13"]
[ext_resource type="Script" path="res://earthCenter.gd" id="14"]
[ext_resource type="PackedScene" path="res://Saturn_1_120536.tscn" id="15"]
[ext_resource type="Texture2D" uid="uid://c2oqv7y4v5d4w" path="res://Solarsystemscope_texture_2k_uranus.jpg" id="16"]
[ext_resource type="Texture2D" uid="uid://c16k3w6wcu5ha" path="res://2k_neptune.jpg" id="17"]
[ext_resource type="PackedScene" path="res://Io_1_3643 (1).tscn" id="18"]
[ext_resource type="Script" path="res://jupiterCenter1.gd" id="19"]
[ext_resource type="Texture2D" uid="uid://bxdhxs55358lq" path="res://Map_of_Ganymede_by_Björn_Jónsson_and_centered_by_J_N_Squire.jpg" id="20"]
[ext_resource type="Texture2D" uid="uid://cygblexx6ayq3" path="res://pia20028_main-rotate.jpg" id="21"]
[ext_resource type="Script" path="res://jupiterCenter3.gd" id="22"]
[ext_resource type="Script" path="res://jupiterCenter2.gd" id="23"]
[ext_resource type="Script" path="res://jupiterCenter4.gd" id="24"]
[ext_resource type="Texture2D" uid="uid://dhbjute5vtb1" path="res://callisto_4k_map_by_jcp_johncarlo_dc4fjip-fullview.jpg" id="25"]
[ext_resource type="Script" path="res://ganymede.gd" id="26"]
[ext_resource type="Script" path="res://europa.gd" id="27"]
[ext_resource type="Script" path="res://callisto.gd" id="28"]
[ext_resource type="Script" path="res://Io_1_3643 (1).gd" id="29"]
[ext_resource type="Script" path="res://mercury.gd" id="30"]
[ext_resource type="Script" path="res://venus.gd" id="31"]
[ext_resource type="Script" path="res://mars.gd" id="32"]
[ext_resource type="Script" path="res://uranus.gd" id="33"]
[ext_resource type="Script" path="res://neptune.gd" id="34"]
[ext_resource type="Texture2D" uid="uid://bwt8ehk3b01j8" path="res://venus_jg.png" id="35"]
[ext_resource type="Texture2D" uid="uid://bcpfqjpcln1ge" path="res://iss.png" id="36"]
[ext_resource type="Texture2D" uid="uid://dcqy1ds5yqnln" path="res://pngegg (2).png" id="37"]
[ext_resource type="Texture2D" uid="uid://c6yi580qtcb4q" path="res://jupiter_new.png" id="38"]
[ext_resource type="Texture2D" uid="uid://dxmd25h3823px" path="res://mercury_new.png" id="39"]
[ext_resource type="Texture2D" uid="uid://bblhhajbatfqg" path="res://neptune.png" id="40"]
[ext_resource type="Texture2D" uid="uid://c787wvwbh08r0" path="res://mars.png" id="41"]
[ext_resource type="Texture2D" uid="uid://bd2a0xrcj5p00" path="res://uranus.png" id="42"]
[ext_resource type="Texture2D" uid="uid://bv0pq03wjobhb" path="res://earth.png" id="43"]
[ext_resource type="PackedScene" path="res://bg_music.tscn" id="44"]
[ext_resource type="AudioStream" uid="uid://e5wb8vclvcer" path="res://fantasy_ui_button_6-102219.wav" id="45"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_sv6vb"]
panorama = ExtResource("1")

[sub_resource type="Sky" id="8"]
sky_material = SubResource("PanoramaSkyMaterial_sv6vb")

[sub_resource type="Environment" id="9"]
background_mode = 2
sky = SubResource("8")
ambient_light_energy = 1.39

[sub_resource type="StandardMaterial3D" id="10"]
shading_mode = 0
albedo_texture = ExtResource("4")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g1v1r"]
albedo_texture = ExtResource("2")

[sub_resource type="SphereMesh" id="4"]
material = SubResource("StandardMaterial3D_g1v1r")
radius = 14.0
height = 23.0

[sub_resource type="StandardMaterial3D" id="12"]
albedo_texture = ExtResource("8")

[sub_resource type="StandardMaterial3D" id="25"]
albedo_texture = ExtResource("20")

[sub_resource type="SphereMesh" id="26"]
material = SubResource("25")
radius = 6.0
height = 12.0

[sub_resource type="StandardMaterial3D" id="27"]
albedo_texture = ExtResource("21")

[sub_resource type="SphereMesh" id="28"]
material = SubResource("27")
radius = 3.0
height = 6.0

[sub_resource type="StandardMaterial3D" id="29"]
albedo_texture = ExtResource("25")

[sub_resource type="SphereMesh" id="30"]
material = SubResource("29")
radius = 5.0
height = 10.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aprjw"]
albedo_texture = ExtResource("6")

[sub_resource type="SphereMesh" id="13"]
material = SubResource("StandardMaterial3D_aprjw")
radius = 18.077
height = 33.0

[sub_resource type="StandardMaterial3D" id="15"]
albedo_texture = ExtResource("10")

[sub_resource type="SphereMesh" id="16"]
material = SubResource("15")
radius = 5.0
height = 9.0
radial_segments = 59

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1ynxh"]
albedo_texture = ExtResource("13")

[sub_resource type="SphereMesh" id="17"]
material = SubResource("StandardMaterial3D_1ynxh")
radius = 8.0
height = 14.0

[sub_resource type="StandardMaterial3D" id="19"]
albedo_texture = ExtResource("12")

[sub_resource type="SphereMesh" id="20"]
material = SubResource("19")
radius = 9.0
height = 18.0

[sub_resource type="StandardMaterial3D" id="21"]
albedo_texture = ExtResource("16")

[sub_resource type="SphereMesh" id="22"]
material = SubResource("21")
radius = 11.0
height = 21.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ibgim"]
albedo_texture = ExtResource("17")

[sub_resource type="SphereMesh" id="23"]
material = SubResource("StandardMaterial3D_ibgim")
radius = 11.0
height = 21.0

[node name="Node3D" type="Node3D"]

[node name="Node3D" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("9")

[node name="sun" type="CSGSphere3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23.6528, -27.692)
radius = 42.635
radial_segments = 100
rings = 17
material = SubResource("10")
script = ExtResource("5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="sun"]
transform = Transform3D(-0.979572, 0, -0.201095, 0, 1, 0, 0.201095, 0, -0.979572, -2.6425, 1.13661, 6.83805)

[node name="earthCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.990175, -0.0713033, 0.120288, -0.0325691, 0.954165, 0.297504, -0.135987, 0.290663, -0.947113, 2.88037, 26.6012, 135.381)
current = true

[node name="earthCenter" type="Node3D" parent="sun"]
transform = Transform3D(0.796055, 0.078652, -0.600092, -0.0666554, 0.996882, 0.0422359, 0.601543, 0.00637725, 0.798815, 2.88045, 0, 172.381)
script = ExtResource("14")

[node name="ISS_stationary" parent="sun/earthCenter" instance=ExtResource("11")]
transform = Transform3D(-0.00999999, -2.75759e-09, -1.86265e-09, 2.91038e-11, 0.01, -1.40062e-09, 1.39698e-09, -1.42973e-09, -0.01, -4.01093, 4.00712, -21.6592)

[node name="issCam" type="Camera3D" parent="sun/earthCenter/ISS_stationary"]
transform = Transform3D(98.5956, -9.1307, -13.9836, 12.2471, 96.4562, 23.3701, 11.3542, -24.7545, 96.22, -53.0879, 79.728, 252.41)
fov = 48.5349

[node name="earth" type="MeshInstance3D" parent="sun"]
transform = Transform3D(0.796055, 0.078652, -0.600092, -0.0666554, 0.996882, 0.0422359, 0.601543, 0.00637725, 0.798815, 2.88045, 0, 172.381)
mesh = SubResource("4")
skeleton = NodePath("../..")
script = ExtResource("3")

[node name="moon" type="CSGSphere3D" parent="sun/earth"]
transform = Transform3D(1, -2.12342e-07, 3.27826e-07, -1.71131e-07, 1, -2.79397e-09, 0, -1.53668e-08, 1, 25.0932, 0.121174, 34.4991)
radius = 7.0
radial_segments = 48
rings = 19
material = SubResource("12")
script = ExtResource("7")

[node name="saturnCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.707107, 0.353553, -0.612372, 0.353553, 0.926777, 0.126827, 0.612372, -0.126826, -0.78033, -36, 6.99991, 532.692)

[node name="Saturn_1_120536" parent="sun" instance=ExtResource("15")]
transform = Transform3D(0.02, 0, 0, 0, 0.0193185, 0.00517638, 0, -0.00517638, 0.0193185, 0, 1.90735e-06, 561.692)

[node name="jupiterCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.314855, -0.808013, 0.497978, -0.0323524, 0.533494, 0.845185, -0.948588, 0.25, -0.194114, 28, 50, 379)
fov = 60.259

[node name="jupiterCenter4" type="Node3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 413)
script = ExtResource("24")

[node name="ganymede" type="MeshInstance3D" parent="sun/jupiterCenter4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -48)
mesh = SubResource("26")
skeleton = NodePath("../..")
script = ExtResource("26")

[node name="jupiterCenter3" type="Node3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 413)
script = ExtResource("22")

[node name="europa" type="MeshInstance3D" parent="sun/jupiterCenter3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -27)
mesh = SubResource("28")
skeleton = NodePath("../..")
script = ExtResource("27")

[node name="jupiterCenter2" type="Node3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 413)
script = ExtResource("23")

[node name="callisto" type="MeshInstance3D" parent="sun/jupiterCenter2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -65)
mesh = SubResource("30")
skeleton = NodePath("../..")
script = ExtResource("28")

[node name="jupiterCenter1" type="Node3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 413)
script = ExtResource("19")

[node name="Io_1_3643 (1)" parent="sun/jupiterCenter1" instance=ExtResource("18")]
transform = Transform3D(0.008, 0, 0, 0, 0.008, 0, 0, 0, 0.008, 1, 0.3472, -35.308)
script = ExtResource("29")

[node name="jupiter" type="MeshInstance3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 413)
mesh = SubResource("13")
script = ExtResource("9")

[node name="mercuryCam" type="Camera3D" parent="sun"]
transform = Transform3D(0.859771, 0.00272012, -0.510672, 1.22958e-06, 0.999986, 0.00532855, 0.510679, -0.00458196, 0.859759, -19, 5.00004, 99)
fov = 67.34

[node name="mercury" type="MeshInstance3D" parent="sun"]
transform = Transform3D(0.999923, 6.47248e-05, -0.012375, 1.2214e-06, 0.999986, 0.00532855, 0.0123752, -0.00532816, 0.999909, 0, 0, 90)
mesh = SubResource("16")
script = ExtResource("30")

[node name="venusCam" type="Camera3D" parent="sun"]
transform = Transform3D(0.0334936, 0.482963, -0.875, 0.12941, 0.866025, 0.482963, 0.991025, -0.12941, -0.0334937, -23, 9, 117)
fov = 57.1983

[node name="venus" type="MeshInstance3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 123)
mesh = SubResource("17")
script = ExtResource("31")

[node name="marsCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, 0, 0, 268)

[node name="mars" type="MeshInstance3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 302)
mesh = SubResource("20")
script = ExtResource("32")

[node name="uranusCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, -36, 9, 668)

[node name="uranus" type="MeshInstance3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 697)
mesh = SubResource("22")
script = ExtResource("33")

[node name="neptuneCam" type="Camera3D" parent="sun"]
transform = Transform3D(-0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, -0.866025, -6, 1.90735e-06, 802)

[node name="neptune" type="MeshInstance3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 852)
mesh = SubResource("23")
script = ExtResource("34")

[node name="EarthCam" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.227
anchor_top = 0.877
anchor_right = 0.316
anchor_bottom = 0.985
offset_left = 11.552
offset_top = -0.200012
offset_right = 0.415985
offset_bottom = -6.10352e-05
toggle_mode = true
icon = ExtResource("43")
flat = true
expand_icon = true

[node name="issCam" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.349
anchor_top = 0.877
anchor_right = 0.427
anchor_bottom = 0.985
offset_left = -0.376007
offset_top = -0.200012
offset_right = -0.248016
offset_bottom = -6.10352e-05
icon = ExtResource("36")
flat = true
expand_icon = true

[node name="mercuryCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.877
anchor_right = 0.098
anchor_bottom = 0.985
offset_left = -0.480001
offset_top = -0.200012
offset_right = -0.352005
offset_bottom = -6.10352e-05
icon = ExtResource("39")
flat = true
expand_icon = true

[node name="venusCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.13
anchor_top = 0.877
anchor_right = 0.208
anchor_bottom = 0.985
offset_left = -0.12001
offset_top = -0.200012
offset_right = 0.00799561
offset_bottom = -6.10352e-05
icon = ExtResource("35")
flat = true
expand_icon = true

[node name="MarsCam" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.455
anchor_top = 0.877
anchor_right = 0.533
anchor_bottom = 0.985
offset_left = 0.0799866
offset_top = -0.200012
offset_right = 0.207947
offset_bottom = -6.10352e-05
icon = ExtResource("41")
flat = true
expand_icon = true

[node name="jupiterCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.566
anchor_top = 0.877
anchor_right = 0.645
anchor_bottom = 0.985
offset_left = 0.415955
offset_top = -0.200012
offset_right = -0.480042
offset_bottom = -6.10352e-05
icon = ExtResource("38")
flat = true
expand_icon = true

[node name="saturnCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.684
anchor_top = 0.877
anchor_right = 0.762
anchor_bottom = 0.985
offset_left = -0.416016
offset_top = -0.200012
offset_right = -0.288025
offset_bottom = -6.10352e-05
icon = ExtResource("37")
flat = true
icon_alignment = 1
expand_icon = true

[node name="uranusCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.789
anchor_top = 0.877
anchor_right = 0.867
anchor_bottom = 0.985
offset_left = 0.0639648
offset_top = -0.200012
offset_right = 0.191956
offset_bottom = -6.10352e-05
icon = ExtResource("42")
flat = true
expand_icon = true

[node name="neptuneCam2" type="Button" parent="sun"]
anchors_preset = -1
anchor_left = 0.901
anchor_top = 0.877
anchor_right = 0.979
anchor_bottom = 0.985
offset_left = 0.375977
offset_top = -0.200012
offset_right = 0.503967
offset_bottom = -6.10352e-05
icon = ExtResource("40")
flat = true
expand_icon = true

[node name="buttonPressed" type="AudioStreamPlayer3D" parent="sun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 54, 340)
stream = ExtResource("45")
volume_db = 50.244
unit_size = 100.0
max_distance = 4096.0

[node name="AudioStreamPlayer3D" parent="." instance=ExtResource("44")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 306, 65, 943)
volume_db = 0.025
unit_size = 96.4

[connection signal="pressed" from="sun/EarthCam" to="sun" method="_on_EarthCam_pressed"]
[connection signal="pressed" from="sun/issCam" to="sun/earthCenter" method="_on_issCam_pressed"]
[connection signal="pressed" from="sun/mercuryCam2" to="sun" method="_on_mercuryCam2_pressed"]
[connection signal="pressed" from="sun/venusCam2" to="sun" method="_on_venusCam2_pressed"]
[connection signal="pressed" from="sun/MarsCam" to="sun" method="_on_MarsCam_pressed"]
[connection signal="pressed" from="sun/jupiterCam2" to="sun" method="_on_jupiterCam2_pressed"]
[connection signal="pressed" from="sun/saturnCam2" to="sun" method="_on_saturnCam2_pressed"]
[connection signal="pressed" from="sun/uranusCam2" to="sun" method="_on_uranusCam2_pressed"]
[connection signal="pressed" from="sun/neptuneCam2" to="sun" method="_on_neptuneCam2_pressed"]
